--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
   "manifest_version": 3,
-  "name": "Bare-Bones",
+  "name": "Youtube Bouncer",
   "version": "1.0",
-  "description": "A basic Extension",
+  "description": "Prevents you from watching YouTube videos that constantly distract you.",
   "action": {
-    "default_popup": "basic_toggle.html",
-    "default_icon": "bare-bones_icon.png"
+    "default_icon": "youtube-bouncer_icon.png"
   },
   "permissions": ["activeTab"],
-  "background": {
-    "service_worker": "background.js"
-  },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["background_switcher.js"]
+      "matches": ["*://*.youtube.com/watch*"],
+      "js": ["content.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["redirects.json"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
