chore: update manifest so the content script is injected on all youtube urls
This is necessary because youtube uses a SPA system. If you don't get
the content script injected at the state, subsequent page navigations
don't trigger the extension to reinject, so the functionality you're
trying to use won't work.

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "permissions": ["activeTab"],
   "content_scripts": [
     {
-      "matches": ["*://*.youtube.com/watch*"],
+      "matches": ["*://*.youtube.com/*"],
       "js": ["content.js"]
     }
   ],
